example/lib/src/generated/errors/errors_localization_ko.dart
// This file is generated by the Google Sheets localization tool. Do not edit manually.

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Korean (`ko`).
class ErrorsLocalizationKo extends ErrorsLocalization {
  ErrorsLocalizationKo([String locale = 'ko']) : super(locale);

  @override
  String get error => '오류가 발생했습니다';

  @override
  String get unexpectedError => '예상치 못한 오류가 발생했습니다.';

  @override
  String authErrorMessages(String errorCode) {
    String _temp0 = intl.Intl.selectLogic(
      errorCode,
      {
        'passwordLengthError': '비밀번호는 최소 6자 이상이어야 합니다',
        'invalidEmailOrPhoneNumberError':
            '유효한 이메일 또는 국제 형식의 전화번호를 입력하세요. 예: me@example.com, +1234567890987',
        'invalidEmailError': '유효하지 않은 이메일입니다',
        'operationNotAllowedError': '허용되지 않은 작업입니다',
        'weakPasswordError': '비밀번호가 너무 약합니다',
        'userTokenExpiredError': '사용자 토큰이 만료되었습니다',
        'invalidPhoneNumberError': '국가 코드와 + 로 시작하는 국제 형식의 전화번호를 입력하세요.',
        'invalidActionCodeError': '동작 코드가 유효하지 않습니다',
        'networkRequestFailedError': '네트워크 요청 실패',
        'tooManyRequestsError': '요청이 너무 많습니다',
        'acceptTermsAndConditionsError': '약관에 동의하고 개인정보 보호정책을 확인하세요.',
        'acceptAIConsentError': '상담은 공인 의료 전문가가 아닌 AI와 이루어짐을 확인하세요.',
        'emailOrPhoneError': '이메일 또는 전화 오류',
        'passwordError': '비밀번호 오류',
        'unknownError': '알 수 없는 오류',
        'googleSSOError': 'Google SSO 오류',
        'emailAlreadyInUse': '해당 이메일 주소는 이미 다른 계정에서 사용 중입니다.',
        'invalidCredentialError': '유효하지 않은 자격 증명입니다',
        'invalidAppCredentialError': '유효하지 않은 앱 자격 증명입니다',
        'invalidVerificationCodeError': '유효하지 않은 인증 코드입니다',
        'other': '알 수 없는 오류',
      },
    );
    return '$_temp0\n';
  }

  @override
  String get bugReportSentText => '버그 보고서가 성공적으로 전송되었습니다.';
}
